# rep01

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SESSAO-FRONTEND-2026-04-03.md  USAGE.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
brand-kit/: brand.example.json  brand.json  editorial-rules.json
frontend/: index.html  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Icons.jsx  (+5 more)
scripts/: run_uat_smoke.py
src/cli/: index.js
src/config/: index.js
src/core/: analyzer.js  brand-kit.js  editorial-planner.js  editorial-rules.js  health.js  keyword-research.js  rss-reader.js  runners.js
src/integrations/: arvo.js  blotado.js  wordpress.js
src/meta_ads_mcp_readonly/: __init__.py  config.py  meta_api.py  server.py
src/server/: index.js
src/services/: errors.js  idempotency.js  idempotent.js  logger.js  retry-queue.js  store.js
tests/: phase-06.test.js  test_config.py  test_integration.py  test_meta_api.py  test_server.py
(+50 files in other folders)
