[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-ads-mcp-readonly"
version = "0.1.0"
description = "Read-only MCP server for Meta Ads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "mcp[cli]>=1.12.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "starlette>=0.37.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
meta-ads-mcp-readonly = "meta_ads_mcp_readonly.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_ads_mcp_readonly"]
